--- a/client/bower.json
+++ b/client/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "bonerwave",
+  "name": "cyber",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
@@ -19,5 +19,5 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "bonerwaveApp"
+  "moduleName": "cyberAoo"
 }
